--- a/public/css/home.css
+++ b/public/css/home.css
@@ -11,12 +11,13 @@
     src: url(../fonts/avenir-regular.otf);
 }
 body{
-    background-color:;
+    margin: 0%;
 }
-.header{
+.navbar{
     display: flex;
     justify-content: space-between;
     font-family: avenir-bold;
+    background-color: #3498DB;
 }
 .linker-helft{
     display: flex;
@@ -26,3 +27,76 @@ body{
     display: flex;
     justify-content: flex-end;
 }
+/* .logout-button-primary {
+    color: #fff;
+    background-color: #0d6efd;
+    border-color: #0d6efd;
+} */
+/* .logout-button {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.6;
+    color: #212529;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 0.9rem;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  } */
+  .dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #707B7C;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #3498DB}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #3498DB;
+}
+.display{
+    display: flex;
+    align-items: center;
+}
+
