--- a/public/spaar.css
+++ b/public/spaar.css
@@ -3,10 +3,7 @@ body {
 }
 
 .keuzes{
-    background-color: blue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: #cbcbd2;
 
 
 }
