--- a/public/spaar.css
+++ b/public/spaar.css
@@ -1,9 +1,48 @@
 body {
+    background-color: rgba(6, 6, 218, 0);
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: white;
+
+}
+.keuzes {
     background-color: #cbcbd2;
+    color: white;
+}
+.spaaren {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    position: relative;
+    top: -150px;
+
+}
+.menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #0a53be;
+    font-size: 45px;
+    position: relative;
+    top: -200px;
+}
+.button {
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 45px;
+    margin: 4px 2px;
+    cursor: pointer;
+    position: relative;
+    bottom: -400px;
+    left: -600px;
+}
+.button1 {
+    background-color: #008CBA;
+    color: white;
 }
 
-.keuzes{
-    background-color: #cbcbd2;
-
-
-}
