--- a/public/css/home.css
+++ b/public/css/home.css
@@ -10,101 +10,101 @@
     font-family: avenir-regular;
     src: url(../fonts/avenir-regular.otf);
 }
-body{
+body {
     margin: 0%;
     background-color: #EBF1FF;
 }
-.navbar{
+.main-container {
     display: flex;
-    justify-content: space-between;
-    font-family: avenir-bold;
-    background-color: #3498DB;
+    background-color: white;
+    max-height: 60px;
 }
-.linker-helft{
+#linker {
     display: flex;
-    justify-content: flex-start;
+    flex: 1;
+    max-width: 100px;
+    margin: 5px;
 }
-.rechter-helft{
+#rechter {
     display: flex;
+    flex: 2;
+}
+.pecunia-logo {
+    width: 89px;
+    height: 50px;
+}
+.avatar{
+    height: 50px;
+    width: 50px;
+}
+#rechter-rechter {
+    display: flex;
+    flex: 1;
     justify-content: flex-end;
+    margin-right: 5px;
 }
-/* .logout-button-primary {
-    color: #fff;
-    background-color: #0d6efd;
-    border-color: #0d6efd;
-} */
-/* .logout-button {
-    display: inline-block;
-    font-weight: 400;
-    line-height: 1.6;
-    color: #212529;
-    text-align: center;
-    text-decoration: none;
-    vertical-align: middle;
-    cursor: pointer;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 0.9rem;
-    border-radius: 0.25rem;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  } */
-  .dropbtn {
-    background-color: #3498DB;
+#knoppen {
+    display: flex;
+    flex: 3;
+    justify-content: flex-start;
+    align-items: center;
+}
+.dropbtn {
+    background-color: #3498db;
     color: white;
     padding: 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
-  }
+    min-width: 160px;
+}
 
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
     position: relative;
     display: inline-block;
-  }
+}
 
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
     display: none;
     position: absolute;
-    background-color: #707B7C;
+    background-color: #707b7c;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-  }
+}
 
-  /* Links inside the dropdown */
-  .dropdown-content a {
+/* Links inside the dropdown */
+.dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-  }
+}
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #3498DB}
+.dropdown-content a:hover {
+    background-color: #3498db;
+}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
-  display: block;
+    display: block;
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-  background-color: #3498DB;
+    background-color: #3498db;
 }
-.display{
+.display {
     display: flex;
     align-items: center;
 }
 .material-icons {
-    font-family: 'Material Icons';
+    font-family: "Material Icons";
     font-weight: normal;
     font-style: normal;
-    font-size: 24px;  /* Preferred icon size */
+    font-size: 24px; /* Preferred icon size */
     display: inline-block;
     line-height: 1;
     text-transform: none;
@@ -122,27 +122,9 @@ body{
     -moz-osx-font-smoothing: grayscale;
 
     /* Support for IE. */
-    font-feature-settings: 'liga';
-  }
-.dropdown-menu-links{
-    display: flex;
-    justify-content: center;
+    font-feature-settings: "liga";
 }
-table, th, td{
-    border: 2px solid;
-    border-color: #3498DB;
-}
-.main-div{
-    margin-top: 20px;
-}
-.graphics{
-    display: flex;
-    justify-content: flex-start;
-}
-
-/* Test stuk voor de website */
-.pecunia-logo{
-    height: 85px;
-    width: 140px;
-    border-radius: 21px;
+a{
+    text-decoration: none;
+    color: black;
 }
