--- a/public/css/spaar.css
+++ b/public/css/spaar.css
@@ -1,18 +1,49 @@
-@font-face {
-    font-family: avenir-bold;
-    src: url(../fonts/avenir-bold.otf);
-}
-@font-face {
-    font-family: avenir-light;
-    src: url(../fonts/avenir-lt.otf);
-}
-@font-face {
-    font-family: avenir-regular;
-    src: url(../fonts/avenir-regular.otf);
-}
+
 body {
-    margin: 0%;
-    background-color: #EBF1FF;
+    background-color: rgba(6, 6, 218, 0);
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #ebf1ff;
+
+}
+.keuzes {
+    background-color: #cbcbd2;
+    color: white;
+}
+.spaaren {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    position: relative;
+    top: -20px;
+}
+.menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #0a53be;
+    font-size: 45px;
+    position: relative;
+    top: -10px;
+}
+.button {
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 45px;
+    margin: 4px 2px;
+    cursor: pointer;
+    position: relative;
+    bottom: -400px;
+    left: -600px;
+}
+.button1 {
+    background-color: #008CBA;
+    color: white;
 }
 .main-container {
     display: flex;
@@ -154,6 +185,24 @@ a{
     width: 300px;
     height: 150px;
     background-color: white;
+}
+
+.test{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid white;
+    -webkit-border-radius: 45px;
+    -moz-border-radius: 45px;
+    border-radius: 45px;
+    width: 300px;
+    height: 420px;
+    background-color: white;
+    margin-top: 25px
+}
+#donutchart{
+    width: 280px;
+    height: 380px;
 }
 
 
