--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,23 +1,15 @@
-@font-face {
-    font-family: avenir-bold;
-    src: url(../fonts/avenir-bold.otf);
-}
-@font-face {
-    font-family: avenir-light;
-    src: url(../fonts/avenir-lt.otf);
-}
-@font-face {
-    font-family: avenir-regular;
-    src: url(../fonts/avenir-regular.otf);
-}
+
 body {
     margin: 0%;
     background-color: #EBF1FF;
+    letter:bold
+
 }
 .main-container {
     display: flex;
     background-color: white;
     max-height: 60px;
+    font-size:20px;
 }
 #linker {
     display: flex;
@@ -53,13 +45,14 @@ body {
     align-items: center;
 }
 .dropbtn {
-    background-color: #3498db;
+    background-color: #0a53be;
     color: white;
     padding: 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
     min-width: 160px;
+    border-radius: 25px;
 }
 
 /* The container <div> - needed to position the dropdown content */
