--- a/public/css/so.css
+++ b/public/css/so.css
@@ -54,4 +54,8 @@ body{
     width: 50px;
     border-radius: 50%;
     margin: 10px 5px;
+    transition: background 0.5s;
 }
+ .card .links img:hover{
+     background: #ff01cf;
+ }
