--- a/public/css/so.css
+++ b/public/css/so.css
@@ -2,13 +2,13 @@
     margin: 0;
     padding:0;
     box-sizing: border-box;
-    font-family:'Poppins', sans-serif;
+    font-family: sans-serif;
 }
 
 .container{
     width: 100%;
     height:100vh;
-    background-image:url(public/images/please.png);
+    background-image:url(public/images/ln.png);
     background-position: center;
     background-size:cover;
     display: flex;
@@ -17,7 +17,7 @@
 }
 
 body{
-    background-image: url(/images/please.png);
+    background-image: url(/images/ln.png);
     width: 100%;
     background-position: center;
     background-size:cover;
@@ -25,25 +25,38 @@ body{
 }
 .drr{
     border-radius: 50px;
+    height: 160px;
+    left: 10px;
 }
 .card{
-    width:90%;
-    max-width:440px;
+    height: 60%;
+    width:600px;
     color: #fff;
     text-align:center;
     padding:50px 35px;
     border: 1px solid rgba(255,255,255,0.3);
+    background: rgba(255,255,255,0.2);
+    border-radius: 16px ;
+    box-shadow:  0 14px 30px rgba(0,0,0,0.1);
+    backdrop-filter: blur(5px);
 }
-
+.btn {
+    text-decoration: none;
+    display: inline-block;
+    font-weight: 500;
+    background: #fff;
+    color: rgba(0, 0, 0, 0.69);
+    padding:  10px 30px;
+    border-radius: 30px;
+    margin: 30px 0 10px;
+    font-size: 30px;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    bottom: -660px;
+}
 .card img{
-    width: 140px;
     border-radius: 50%;
-}
-
-.card h2{
-    font-size:40px;
-    font-weight:600;
-    margin-top:20px;
 }
 .card p {
     font-size: 18px;
@@ -51,11 +64,27 @@ body{
     max-width: 330px;
 }
 .card .links img{
-    width: 50px;
+    height: 110px;
+    width:120px;
     border-radius: 50%;
     margin: 10px 5px;
     transition: background 0.5s;
+    box-shadow:  0 4px 30px rgba(0,0,0,0.1);
+    left: 10px;
+    position: relative;
+    bottom: -665px;
 }
- .card .links img:hover{
-     background: #ff01cf;
+
+
+
+
+ .opgeslaan{
+     white-space: nowrap;
+     overflow: hidden;
+     text-overflow: "----";
+     font-size: 35px;
+     justify-content: center;
+     align-items: center;
+     position: relative;
+     bottom: -150px;
  }
