wijzegingen + nieuwe bestanden

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,17 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
 @charset "UTF-8";
+@font-face {
+    font-family: avenir-bold;
+    src: url(../fonts/avenir-bold.otf);
+}
+@font-face {
+    font-family: avenir-light;
+    src: url(../fonts/avenir-lt.otf);
+}
+@font-face {
+    font-family: avenir-regular;
+    src: url(../fonts/avenir-regular.otf);
+}
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -79,8 +91,8 @@ body {
   font-weight: var(--bs-body-font-weight);
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
-
-  background-color: #cbcbd2;
+  background-color: #EBF1FF;
+  font-family: avenir-regular;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -7488,7 +7500,7 @@ textarea.form-control-lg {
 .py-4 {
   padding-top: 1.5rem !important;
   padding-bottom: 1.5rem !important;
-  background-color:  #cbcbd2;
+  background-color: #EBF1FF;
 
 }
 
@@ -11289,7 +11301,7 @@ textarea.form-control-lg {
   }
 }
 
-. sewo{
+.sewo{
     display: flex;
     justify-content: center;
     align-items: center;
