Veranderingen in Home blade,Spaar blade,So blade en ook alle css blades alle changes heeft te maken met design

--- a/public/css/spaardoel.css
+++ b/public/css/spaardoel.css
@@ -1,50 +1,88 @@
-*{
+* {
     margin: 0;
-    padding:0;
+    padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    left: 100px;
 }
 
-.container{
+.container {
     width: 100%;
-    height:100vh;
-    background-image:url(public/images/ln.png);
+    height: 100vh;
+    background-image: url(public/images/ln.png);
     background-position: center;
-    background-size:cover;
+    background-size: cover;
     display: flex;
     align-items: center;
-    justify-content:center;
+    justify-content: center;
+
+}
+.textincard{
+    font-size:45px;
 }
 
-body{
+. spaardoelen{
+    border-radius:25%;
+}
+
+body {
     background-image: url(/images/ln.png);
     width: 100%;
     background-position: center;
-    background-size:cover;
-    height:100vh;
+    background-size: cover;
+    height: 100vh;
 }
-.drr{
+
+.logo {
     border-radius: 50px;
     height: 160px;
     left: 10px;
 }
-.card{
-    height: 60%;
-    width:1500px;
+
+.card {
+    height: 95%;
+    width: 1500px;
     color: #fff;
-    text-align:center;
-    padding:50px 35px;
-    border: 1px solid rgba(255,255,255,0.3);
-    background: rgba(255,255,255,0.2);
-    border-radius: 16px ;
-    box-shadow:  0 14px 30px rgba(0,0,0,0.1);
+    text-align: center;
+    padding: 50px 35px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 16px;
+    box-shadow: 0 14px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(20px);
-    font-size: 40px;
+    font-size: 30px;
+
 }
 
-.card img{
+.card img {
     border-radius: 50%;
 }
 
+.bara {
+    border-radius: 70%;
+    background-color: #f10055;
+}
 
+.porta {
+    border-radius: 25%;
+    background-color: blue;
+}
+
+
+
+.inpbtns {
+    background-color: blue;
+    border-radius: 50%;
+    height: 20px;
+    font-size: 30px;
+}
+
+.label {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin-bottom: 10px;
+}
+
+.label input {
+    font-size: 20px;
+}
 
