--- a/public/css/home.css
+++ b/public/css/home.css
@@ -12,13 +12,52 @@
 }
 body {
     margin: 0%;
-    background-color: #EBF1FF;
     font-family: avenir-regular;
+    background-image: url(/images/ln.png);
+    width: 100%;
+    background-position: center;
+    background-size:cover;
+    height:100vh;
 }
+.container{
+    width: 100%;
+    height:100vh;
+    background-image:url(public/images/ln.png);
+    background-position: center;
+    background-size:cover;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+}
+.dashboardw{
+    color: white;
+    font-size:20px;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+
+}
+.card{
+    display:flex;
+    height:800px;
+    width:1700px;
+    color: #fff;
+    text-align:center;
+    padding:50px 35px;
+    border: 1px solid rgba(255,255,255,0.3);
+    background: rgba(255,255,255,0.2);
+    border-radius: 16px ;
+    box-shadow:  0 14px 30px rgba(0,0,0,0.1);
+    backdrop-filter: blur(5px);
+bottom: -500px;
+
+}
+
 .main-container {
     display: flex;
     background-color: white;
     max-height: 60px;
+    width: 100%;
 }
 #linker {
     display: flex;
@@ -220,3 +259,4 @@ table {
     color: #3498db;
     font-family: avenir-bold;
 }
+
