--- a/public/css/so.css
+++ b/public/css/so.css
@@ -29,16 +29,16 @@ body{
     left: 10px;
 }
 .card{
-    height: 60%;
+    height: 90%;
     width:600px;
     color: #fff;
     text-align:center;
     padding:50px 35px;
-    border: 1px solid rgba(255,255,255,0.3);
+    border: 20px solid rgba(255,255,255,0.3);
     background: rgba(255,255,255,0.2);
     border-radius: 16px ;
-    box-shadow:  0 14px 30px rgba(0,0,0,0.1);
-    backdrop-filter: blur(5px);
+    box-shadow:  0 24px 30px rgba(0,0,0,0.1);
+    backdrop-filter: blur(40px);
 }
 .btn {
     text-decoration: none;
@@ -53,7 +53,7 @@ body{
     justify-content: center;
     align-items: center;
     position: relative;
-    bottom: -660px;
+    bottom: -560px;
 }
 .card img{
     border-radius: 50%;
@@ -64,19 +64,15 @@ body{
     max-width: 330px;
 }
 .card .links img{
-    height: 110px;
-    width:120px;
+    max-height: 70px;
+    max-width:80px;
     border-radius: 50%;
     margin: 10px 5px;
     transition: background 0.5s;
     box-shadow:  0 4px 30px rgba(0,0,0,0.1);
-    left: 10px;
     position: relative;
-    bottom: -665px;
+    bottom: -570px;
 }
-
-
-
 
 .opgeslaan{
     white-space: nowrap;
