--- a/public/css/home.css
+++ b/public/css/home.css
@@ -10,14 +10,38 @@
     font-family: avenir-regular;
     src: url(../fonts/avenir-regular.otf);
 }
-body {
+body{
     margin: 0%;
-    font-family: avenir-regular;
     background-image: url(/images/ln.png);
-    width: 100%;
-    background-position: center;
     background-size:cover;
     height:100vh;
+    min-height:100vh;
+}
+.navigation{
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    bottom: 20px;
+    width: 300px;
+    border-radius:10px;
+    box-sizing: initial;
+    border-left: 5px solid #4d5bf9;
+    transition:0.5s;
+}
+.navigation ul{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding-left: 5px;
+    padding-top: 40px;
+
+}
+*{
+    margin: 0;
+    padding:0;
+    box-sizing: border-box;
+    font-family:'Poppins', sans-serif;
 }
 .container{
     width: 100%;
@@ -28,6 +52,7 @@ body {
     display: flex;
     align-items: center;
     justify-content:center;
+    right:100%;
 }
 .dashboardw{
     color: white;
@@ -49,7 +74,8 @@ body {
     border-radius: 16px ;
     box-shadow:  0 14px 30px rgba(0,0,0,0.1);
     backdrop-filter: blur(5px);
-bottom: -500px;
+    right:100%;
+
 
 }
 
@@ -59,114 +85,14 @@ bottom: -500px;
     max-height: 60px;
     width: 100%;
 }
-#linker {
-    display: flex;
-    flex: 1;
-    max-width: 100px;
-    margin: 5px;
-}
-#rechter {
-    display: flex;
-    flex: 2;
-}
-.pecunia-logo {
-    width: 89px;
-    height: 50px;
-    -webkit-border-radius: 18px;
-    -moz-border-radius: 18px;
-    border-radius: 18px;
-}
-.avatar{
-    height: 50px;
-    width: 50px;
-}
-#rechter-rechter {
-    display: flex;
-    flex: 1;
-    justify-content: flex-end;
-    margin-right: 5px;
-}
-#knoppen {
-    display: flex;
-    flex: 3;
-    justify-content: flex-start;
-    align-items: center;
-}
-.dropbtn {
-    background-color: #3498db;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    min-width: 160px;
-}
 
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
 
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #707b7c;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
 
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-    background-color: #3498db;
-}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-    background-color: #3498db;
-}
 .display {
     display: flex;
     align-items: center;
 }
-.material-icons {
-    font-family: "Material Icons";
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px; /* Preferred icon size */
-    display: inline-block;
-    line-height: 1;
-    text-transform: none;
-    letter-spacing: normal;
-    word-wrap: normal;
-    white-space: nowrap;
-    direction: ltr;
 
-    /* Support for all WebKit browsers. */
-    -webkit-font-smoothing: antialiased;
-    /* Support for Safari and Chrome. */
-    text-rendering: optimizeLegibility;
-
-    /* Support for Firefox. */
-    -moz-osx-font-smoothing: grayscale;
-
-    /* Support for IE. */
-    font-feature-settings: "liga";
-}
 a{
     text-decoration: none;
     color: black;
@@ -248,13 +174,7 @@ table {
     border: 1px solid #D9DDE9;
     height: 45px;
 }
-#home-button{
-    border-style: solid;
-    border-bottom: thick line;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-}
+
 #table-header{
     color: #3498db;
     font-family: avenir-bold;
