--- a/public/css/spaardoel.css
+++ b/public/css/spaardoel.css
@@ -16,12 +16,13 @@
     justify-content: center;
 
 }
-.textincard{
-    font-size:45px;
+
+.textincard {
+    font-size: 45px;
 }
 
-. spaardoelen{
-    border-radius:25%;
+. spaardoelen {
+    border-radius: 25%;
 }
 
 body {
@@ -35,7 +36,7 @@ body {
 .logo {
     border-radius: 50px;
     height: 160px;
-    left: 10px;
+
 }
 
 .card {
@@ -49,40 +50,52 @@ body {
     border-radius: 16px;
     box-shadow: 0 14px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(20px);
-    font-size: 30px;
-
+    margin-bottom: 25px;
 }
 
 .card img {
     border-radius: 50%;
 }
 
-.bara {
-    border-radius: 70%;
-    background-color: #f10055;
-}
-
-.porta {
-    border-radius: 25%;
-    background-color: blue;
-}
-
-
-
-.inpbtns {
-    background-color: blue;
-    border-radius: 50%;
-    height: 20px;
-    font-size: 30px;
-}
-
 .label {
     display: grid;
     grid-template-columns: 50% 50%;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
+    border-radius: 25px;
 }
 
 .label input {
-    font-size: 20px;
+    font-size: 30px;
+    border-radius: 20px;
+    border: 4px solid #050505;
+    width:500px;
 }
 
+
+input[type='checkbox'] {
+    -webkit-appearance: none;
+    width: 30px;
+    height: 30px;
+    background: white;
+    border-radius: 5px;
+    border: 4px solid #050505;
+}
+
+input[type='checkbox']:checked {
+    background: #2316fc;
+}
+
+.inputenreset {
+    color:white;
+    font-size: 30px;
+    background-color: blue;
+    border-radius: 20px;
+    border: 4px solid #050505;
+    width: 20%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+
+
+
+}
