--- a/public/css/home.css
+++ b/public/css/home.css
@@ -10,23 +10,29 @@
     font-family: avenir-regular;
     src: url(../fonts/avenir-regular.otf);
 }
+
 body{
-    margin: 0%;
     background-image: url(/images/ln.png);
+    width: 100%;
+    background-position: center;
     background-size:cover;
     height:100vh;
-    min-height:100vh;
 }
 .navigation{
     position: fixed;
     top: 20px;
     left: 20px;
     bottom: 20px;
-    width: 300px;
+    width: 70px;
     border-radius:10px;
     box-sizing: initial;
-    border-left: 5px solid #4d5bf9;
-    transition:0.5s;
+    background: #0000ff;
+    border-left: 5px solid #0000ff;
+    transition: width 0.5s;
+    overflow-x: hidden;
+}
+.navigation.active{
+    width:300px;
 }
 .navigation ul{
     position: absolute;
@@ -36,6 +42,117 @@ body{
     padding-left: 5px;
     padding-top: 40px;
 
+}
+.navigation ul li b:nth-child(1){
+    position:absolute;
+    top:-20px;
+    left: 20px;
+    width:100%;
+    background: white;
+    display:none;
+}
+.navigation ul li.active b:nth-child(1),
+.navigation ul li.active b:nth-child(2){
+
+    display:block;
+}
+
+.navigation ul li b:nth-child(1)::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width:100%;
+    height:100%;
+    border-bottom-left-radius: 20px;
+    background: #0000ff;
+}
+.navigation ul li b:nth-child(2){
+    position:absolute;
+  bottom:-20px;
+    left: 20px;
+    width:100%;
+    background: white;
+    display:none;
+}
+.navigation ul li b:nth-child(2)::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width:100%;
+    height:100%;
+    border-top-left-radius: 20px;
+    background: #0000ff;
+}
+.navigation ul li{
+    position: relative;
+    list-style: none;
+    width: 100%;
+    border-top-left-radius:20px;
+    border-bottom-left-radius:20px;
+}
+.navigation ul li.active{
+    background: white;
+}
+.toggle{
+    position:fixed;
+    top:20px;
+    right:20px;
+    width: 50px;
+    height:50px;
+    background:blue;
+    border-radius: 10px;
+    cursor:pointer;
+    justify-content: center;
+    align-items: center;
+}
+.toggle ion-icon{
+    position:absolute;
+    color: white;
+    font-size:34px;
+    display: none;
+}
+.toggle ion-icon.open,
+.toggle.active ion-icon.close{
+    display: block;
+}
+.toggle ion-icon.close,
+.toggle.active ion-icon.open{
+    display:none;
+}
+.toggle.active{
+    background: #ff4d89;
+}
+.navigation ul li.active a{
+    color: black;
+}
+.navigation ul li a{
+    position: relative;
+    display: block;
+    width: 100%;
+    display: flex;
+    text-decoration: none;
+    color: #fff;
+}
+.navigation ul li a .icon{
+    position: relative;
+    display: block;
+    min-width: 60px;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+}
+.navigation ul li a .icon ion-icon{
+    font-size:1.5em;
+}
+.navigation ul li a  .title{
+    position: relative;
+    display: block;
+    padding-left:10px;
+    height:60px;
+    line-height: 60px;
+    white-space: normal;
 }
 *{
     margin: 0;
@@ -52,7 +169,6 @@ body{
     display: flex;
     align-items: center;
     justify-content:center;
-    right:100%;
 }
 .dashboardw{
     color: white;
@@ -63,20 +179,16 @@ body{
 
 }
 .card{
-    display:flex;
-    height:800px;
-    width:1700px;
+    height: 80%;
+    width:90%;
     color: #fff;
-    text-align:center;
+   right:100%;
     padding:50px 35px;
     border: 1px solid rgba(255,255,255,0.3);
     background: rgba(255,255,255,0.2);
     border-radius: 16px ;
     box-shadow:  0 14px 30px rgba(0,0,0,0.1);
     backdrop-filter: blur(5px);
-    right:100%;
-
-
 }
 
 .main-container {
@@ -163,20 +275,5 @@ a{
     background-color: white;
     margin-top: 25px
 }
-table {
-    border-spacing: 150px 0px;
-}
-#line {
-    width: 3px;
-    background-color: #D9DDE9;
-    color: #D9DDE9;
-    border-radius: 45px;
-    border: 1px solid #D9DDE9;
-    height: 45px;
-}
 
-#table-header{
-    color: #3498db;
-    font-family: avenir-bold;
-}
 
