--- a/public/css/home.css
+++ b/public/css/home.css
@@ -100,6 +100,7 @@ a{
 }
 .main-content-container{
     display: flex;
+    justify-content: center;
     margin-top: 2%;
     margin-left: 1%;
     margin-right: 1%;
