--- a/public/css/addcategory.css
+++ b/public/css/addcategory.css
@@ -2,10 +2,7 @@
     font-family: avenir-regular;
     src: url(../fonts/avenir-regular.otf);
 }
-body{
-    font-family: avenir-regular;
-    background-color: #ebf1ff;
-}
+
 .nobo{
     display: flex;
     justify-content: center;
@@ -35,9 +32,59 @@ body{
     justify-content: center;
     align-items: center;
     font-size: 30px;
-    color:blue;
+    color: rgb(255, 255, 255);
 
 }
 .lll{
     font-size: 30px;
 }
+body{
+    background-image: url(/images/ln.png);
+    width: 100%;
+    background-position: center;
+    background-size:cover;
+    height:100vh;
+}
+.container{
+    width: 100%;
+    height:100vh;
+    background-image:url(public/images/ln.png);
+    background-position: center;
+    background-size:cover;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+}
+*{
+    margin: 0;
+    padding:0;
+    box-sizing: border-box;
+    font-family:'Poppins', sans-serif;
+}
+.card{
+    height: 30%;
+    width:30%;
+    color: #fff;
+    text-align:center;
+    padding:50px 35px;
+    border: 1px solid rgba(255,255,255,0.3);
+    background: rgba(255,255,255,0.2);
+    border-radius: 16px ;
+    box-shadow:  0 14px 30px rgba(0,0,0,0.1);
+    backdrop-filter: blur(5px);
+}
+.inputenreset {
+     color:white;
+     font-size: 30px;
+     background-color: blue;
+     border-radius: 20px;
+     border: 4px solid #050505;
+     width: 20%;
+   bottom: 80%;
+ }
+.create2{
+    border-radius:25px;
+    spacing:1.5ms;
+    size:20px;
+}
+
