--- a/public/css/home.css
+++ b/public/css/home.css
@@ -168,7 +168,9 @@ body{
     background-size:cover;
     display: flex;
     align-items: center;
+    bottom: 100%;
     justify-content:center;
+
 }
 .dashboardw{
     color: white;
@@ -176,19 +178,19 @@ body{
     display: flex;
     align-items: center;
     justify-content:center;
-
 }
 .card{
     height: 80%;
     width:90%;
     color: #fff;
-   right:100%;
+    bottom: 100%;
     padding:50px 35px;
     border: 1px solid rgba(255,255,255,0.3);
     background: rgba(255,255,255,0.2);
     border-radius: 16px ;
     box-shadow:  0 14px 30px rgba(0,0,0,0.1);
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(10px);
+
 }
 
 .main-container {
