--- a/public/css/login.css
+++ b/public/css/login.css
@@ -22,8 +22,26 @@ header{
 .app{
     background-color:  #EBF1FF;
 }
-.sewo{
+.logo{
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius:50px;
+}
+body{
+    background-image: url(/images/ln.png);
+    width: 100%;
+    background-position: center;
+    background-size:cover;
+    height:100vh;
+}
+.container{
+    width: 100%;
+    height:100vh;
+    background-image:url(public/images/ln.png);
+    background-position: center;
+    background-size:cover;
+    display: flex;
+    align-items: center;
+    justify-content:center;
 }
