--- a/public/css/spaardoel.css
+++ b/public/css/spaardoel.css
@@ -41,7 +41,7 @@ body {
 
 .card {
     height: 95%;
-    width: 1500px;
+    width: 70%;
     color: #fff;
     text-align: center;
     padding: 50px 35px;
@@ -95,7 +95,4 @@ input[type='checkbox']:checked {
     text-align: center;
     align-items: center;
     justify-content: center;
-
-
-
 }
